initail commit to pull code

--- a/app/views/mains/home.html.erb
+++ b/app/views/mains/home.html.erb
@@ -1,1 +1,9 @@
-<h1> main page</h1>
+<header>
+  <div class="menu-bar">
+    <div class="menubutton">
+      <button class="togglebutton">
+        <i class="fa fa-bars"></i>
+      </button>
+    </div>
+  </div>
+</header>
