--- a/app/views/mains/contact.html.erb
+++ b/app/views/mains/contact.html.erb
@@ -8,7 +8,7 @@
 
 
 
-  <%= form_for(@booking) do |f| %>
+  <%= form_for(@booking, url: bookings_path) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
       <div class="form-group">
