--- a/app/views/mains/home.html.erb
+++ b/app/views/mains/home.html.erb
@@ -1,3 +1,3 @@
 <h1 class="text-center"> main page</h1>
 
-<a href="<%= new_booking_path%>"> Create booking</a>
+<a href="<%= contact_path %>"> Create booking</a>
