--- a/app/views/mains/home.html.erb
+++ b/app/views/mains/home.html.erb
@@ -1,7 +1,7 @@
 <header>
   <div class="menu-bar">
     <div class="menubutton">
-      <button class="togglebutton">
+      <button class="toggle-button">
         <i class="fa fa-bars"></i>
       </button>
     </div>
