--- a/app/views/mains/contact.html.erb
+++ b/app/views/mains/contact.html.erb
@@ -4,11 +4,13 @@
 
 
 <div class="container" style="padding:100px;">
-  <h1>Booking Requets</h1>
+
+  <h1 id="headings">Booking Requets</h1>
+  <span id="helpBlock" class="help-block"></span>
 
 
 
-  <%= form_for(@booking, url: bookings_path) do |f| %>
+  <%= form_for(@booking, :html=>{:remote=>true}) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
       <div class="form-group">
@@ -28,14 +30,14 @@
       </div>
 
       <div class="form-group">
-        <%= f.text_field :indication, class: "form-control form-control-user", id: "exampleInputIndication", placeholder: "Indication" %>
+        <%= f.text_field :indication, class: "form-control form-control-user", id: "exampleInputIndication", placeholder: "Disease type" %>
       </div>
 
       <div class="form-group">
-        <%= f.text_field :message, class: "form-control form-control-user", id: "exampleInputMessage", placeholder: "Message" %>
+        <%= f.text_area :message, class: "form-control form-control-user",rows: "5", cols: "10",placeholder: "Inquiry", style: "resize:none;" %>
       </div>
 
-      <%= f.submit "Save Changes", class: "btn btn-primary btn-user btn-block" %>
+      <%= f.submit "Save Changes", class: "btn btn-primary btn-user btn-block", id: "submit-button" %>
   <% end %>
 
 </div>
