--- a/app/views/mains/contact.html.erb
+++ b/app/views/mains/contact.html.erb
@@ -6,6 +6,7 @@
 <div class="container" style="padding:100px;">
 
   <h1 id="headings">Booking Requets</h1>
+  <hr>
   <span id="helpBlock" class="help-block"></span>
 
 
@@ -14,7 +15,14 @@
       <%= render 'shared/error_messages', object: f.object %>
 
       <div class="form-group">
+       <%= f.label :first_name, style: "padding-top:7px; font-weight:bold; font-size:20px;" %>
+        </div>
+      <div class="form-group">
         <%= f.text_field :first_name, class: 'form-control form-control-user', id: "exampleFirstName", placeholder: "First Name" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :second_name, style: "padding-top:7px; font-weight:bold; font-size:20px;" %>
       </div>
 
       <div class="form-group">
@@ -22,7 +30,15 @@
       </div>
 
       <div class="form-group">
+        <%= f.label :email, style: "padding-top:7px; font-weight:bold; font-size:20px;" %>
+      </div>
+
+      <div class="form-group">
         <%= f.email_field :email, class: "form-control form-control-user", id: "exampleInputEmail", placeholder: "Email Address" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :phone, style: "padding-top:7px; font-weight:bold; font-size:20px;" %>
       </div>
 
       <div class="form-group">
@@ -30,7 +46,15 @@
       </div>
 
       <div class="form-group">
+        <%= f.label :indication, "Disease type", style: "padding-top:7px; font-weight:bold; font-size:20px;" %>
+      </div>
+
+      <div class="form-group">
         <%= f.text_field :indication, class: "form-control form-control-user", id: "exampleInputIndication", placeholder: "Disease type" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :message, style: "padding-top:7px; font-weight:bold; font-size:20px;" %>
       </div>
 
       <div class="form-group">
