--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
     <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
     <% end %>
+    <%= render partial: 'shared/header'%>
     <%= yield %>
+    <%= render partial: 'shared/footer'%>
   </div>
 
   </body>
