--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,4 +1,3 @@
-
 <% provide(:title, 'Booking') %>
 
 <div class="container" style="padding:100px;">
@@ -37,7 +36,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.number_field :phone, class: "form-control form-control-user", id: "exampleInputPhone", placeholder: "Phone Number" %>
+        <%= f.telephone_field :phone, id: "phone", class: "form-control form-control-user"%>
       </div>
 
       <div class="form-group">
@@ -58,5 +57,4 @@
 
       <%= f.submit "Save Changes", class: "btn btn-primary btn-user btn-block", id: "submit-button" %>
   <% end %>
-
 </div>
