add slider into home page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,10 @@
 @import "menu";
 @import "d-utiltity";
 @import "font-awesome";
-@import "home";
 @import "contact";
 @import "intlTelInput";
+@import "slider";
+@import 'slick';
+@import "home";
+@import 'slick-theme';
+@import 'slider'
