--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,14 @@
 <main>
-  <div class="slideer">
-  Slider
+  <div id="slideshow" class="sliders">
+    <div class="active-slide slide">
+      <%= image_tag "Slider1Pictures/1.jpg", class:"image" %>
+    </div>
+    <div class="slide">
+      <%= image_tag "Slider1Pictures/2.jpg", class:"image" %>
+    </div>
+    <div class="slide">
+      <%= image_tag "Slider1Pictures/3.jpg", class:"image" %>
+    </div>
   </div>
   <section class="services-section">
     <div class="services-container">
