--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,7 +1,16 @@
-<main>
-    <div class="slideer">
-        Slider
-    </div>
+<main class="padding-top-75">
+    <section class="slider">
+      <div class="slider-back-image-container">
+        <div class="slider-text-container">
+          <div class="slider-heading heading-lg">
+            About us
+          </div>
+          <div class="slider-text white-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam beatae, doloremque earum molestias repudiandae vel?
+          </div>
+        </div>
+      </div>
+    </section>
     <%= render partial: 'working_hours'%>
     <%= render partial: 'qualified' %>
 </main>
