--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -149,5 +149,67 @@
     </div>
   </section>
   <%= render partial: 'qualified' %>
+  <section class="reviews-container">
+    <div class="reviews-inner-container">
+
+       <%= render partial: 'form' %>
+
+      <div class="reviews-right-side reviews-sides">
+        <div class="reviews-heading-black heading-lg">
+          Customer Reviews
+        </div>
+        <div class="reviews-review-container">
+          <div class="reviews-review-left">
+            <i class="fa fa-quote-right active fa-2x"></i>
+          </div>
+          <div class="reviews-review-right">
+            <div class="reviews-review-right-top gray-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Aliquam commodi consequatur deleniti distinctio, enim, eveniet perferendis porro quasi quo
+              reprehenderit repudiandae sed sequi unde voluptatibus.
+            </div>
+            <div class="reviews-review-right-bottom">
+              <div class="reviews-review-right-photo">
+                <img src="https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/test-1.png" alt="photo-icon" class="profile-image">
+              </div>
+              <div>
+              <div class="reviews-review-reviewer-name heading-md">
+                Mario Hughes
+              </div>
+              <div class="reviews-review-reviewer-position">
+                PEDIATRIC CENTER
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="reviews-review-container">
+          <div class="reviews-review-left">
+            <i class="fa fa-quote-right fa-2x active"></i>
+          </div>
+          <div class="reviews-review-right">
+            <div class="reviews-review-right-top gray-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Aliquam commodi consequatur deleniti distinctio, enim, eveniet perferendis porro quasi quo
+              reprehenderit repudiandae sed sequi unde voluptatibus.
+            </div>
+            <div class="reviews-review-right-bottom">
+              <div class="reviews-review-right-photo">
+                <img src="https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/test-1.png" alt="photo-icon" class="profile-image">
+              </div>
+              <div>
+              <div class="reviews-review-reviewer-name heading-md">
+                Mario Hughes
+              </div>
+              <div class="reviews-review-reviewer-position">
+                PEDIATRIC CENTER
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 <!--<a href="<%#= new_booking_path%>"> Create booking</a>-->
