--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,12 +12,13 @@
       </div>
       <div class="menu-items-center u-flex-1">
       <div class="menu-items u-d-flex ">
-        <div class="menu-item active">
+       <a href="/"> <div class="menu-item active">
           Home
         </div>
+       </a>
         <div class="menu-item">Treatment</div>
-        <div class="menu-item">About us</div>
-        <div class="menu-item">Contact</div>
+        <a href="/about"><div class="menu-item">About us</div></a>
+        <a href="/contact"> <div class="menu-item">Contact</div></a>
       </div>
       </div>
       <div class="menu-item-right u-d-flex u-align-item-center">
