--- a/app/assets/stylesheets/d-utiltity.scss
+++ b/app/assets/stylesheets/d-utiltity.scss
@@ -31,3 +31,17 @@
   letter-spacing: 0px;
   text-transform: none;
 }
+heading-md{
+  color: #181c1b;
+  font-family: 'Roboto',sans-serif;
+  font-size: 20px;
+  line-height: 26px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0px;
+  text-transform: none;
+
+}
+.padding-top-75{
+  padding-top: 75px;
+}
