--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,11 +13,11 @@
       <div class="menu-items-center u-flex-1">
       <div class="menu-items u-d-flex ">
         <div class="menu-item active">
-          Home
+         <a href="<%= root_path %>"> Home </a>
         </div>
         <div class="menu-item">Treatment</div>
-        <div class="menu-item">About us</div>
-        <div class="menu-item">Contact</div>
+        <div class="menu-item"><a href="<%= about_path %>">About us </a></div>
+        <div class="menu-item"><a href="<%= contact_path%>">Contact </a></div>
       </div>
       </div>
       <div class="menu-item-right u-d-flex u-align-item-center">
