create booking show error messages, and reset form after submit

--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -6,6 +6,7 @@
     <div class="appointment-form-heading">
       Book Appointment
     </div>
+    <div id="helpBlock" class="help-block"></div>
     <%= form_for(@booking, :html => {:remote => true}) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
       <div class="appointment-form-row">
