--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -135,7 +135,7 @@
 }
 .quality{
   &-background-container{
-    background-image: image_url("Slider3/shutterstock_1356835016.jpg");
+    background-image: image_url("Slider3/1.jpg");
     //height: 100vh;
     background-position: top;
     display: flex;
