--- a/app/views/home/_working_hours.html.erb
+++ b/app/views/home/_working_hours.html.erb
@@ -4,7 +4,7 @@
         <div class="health-cards">
           <div class="health-cards-header">
             <div class="health-card-img-container">
-              <%= image_tag 'Slider2/shutterstock_406609366.jpg', class: 'health-card-img' %>
+              <%= image_tag 'Slider2/1.jpg', class: 'health-card-img' %>
             </div>
           </div>
           <div class="health-card-heading">
@@ -17,7 +17,7 @@
         <div class="health-cards">
           <div class="health-cards-header">
             <div class="health-card-img-container">
-              <%= image_tag 'Slider2/shutterstock_406609366.jpg', class: 'health-card-img',alt: 'image' %>
+              <%= image_tag 'Slider2/1.jpg', class: 'health-card-img',alt: 'image' %>
 
               <!--              <img src="https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/img-2.jpg" alt="image" class="health-card-img">-->
             </div>
