--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,6 +1,6 @@
 .footer{
   background-color: #202d33;
-  padding-top: 74px;
+  padding: 80px 0;
   color: #fff;
   &-data-container{
     display: flex;
@@ -94,6 +94,10 @@
   display: none;
   justify-content: center;
   align-items: center;
+  &:hover{
+    background-color:#e8e8e8;
+    //color: #000;
+  }
 }
 .move-to-top{
   color: #e8e8e8;;
