--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -27,24 +27,35 @@
   flex: 0 0 30%;
 }
 .menu-item{
-  width: 20%;
+  width: 18%;
   min-width: 100px;
   text-transform: uppercase;
   font-family: 'Roboto',sans-serif;
   color:#000;
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 500;
   text-align: center;
   &:hover{
     color: #00a0f0;
   }
+  &  a{
+    color: #000;
+  }
+  & a:hover{
+    color: #00a0f0;
+  }
 }
+
 .menu-items a:hover{
   text-decoration: none;
 }
 .active{
   color: #00a0f0;
+  & a{
+    color: #00a0f0;
+  }
 }
+
 .phone-container{
   padding-right: 20px;
   border-right: 1px dashed #ccc;
@@ -52,4 +63,5 @@
 .logo-image{
   position: absolute;
   top: 0px;
+  left: 70px;
 }
