contant to contact

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -24,7 +24,7 @@
         <div class="footer-col-link footer-col-link1">Home</div>
         <div class="footer-col-link footer-col-link2">Treatment</div>
         <div class="footer-col-link footer-col-link3">About us</div>
-        <div class="footer-col-link footer-col-link4">contant</div>
+        <div class="footer-col-link footer-col-link4">contact</div>
       </div>
       <div class="footer-col footer-col3">
         <div class="footer-col-heading">
