--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,12 +2,46 @@
   <div id="slideshow" class="sliders">
     <div class="active-slide slide">
       <%= image_tag "Slider1Pictures/1.jpg", class:"image" %>
+      <div class="slider-data-text">
+        <div class="slider-heading">
+          World-Renowned Experts
+        </div>
+        <div class="slider-text mt-2 mr-5 ml-5">
+          PlusOne ensures a hassle-free medical journey powered by a case manager for every individual case.
+        </div>
+        <button class="btns btns-submit mt-5">
+          Ask PlusOne Expert
+        </button>
+      </div>
+
     </div>
     <div class="slide">
       <%= image_tag "Slider1Pictures/2.jpg", class:"image" %>
+      <div class="slider-data-text">
+        <div class="slider-heading">
+          Timely Consultations
+        </div>
+        <div class="slider-text mt-2 mr-5 ml-5">
+          PlusOne ensures a hassle-free medical journey powered by a case manager for every individual case.
+        </div>
+        <button class="btns btns-submit mt-5">
+          Ask PlusOne Expert
+        </button>
+      </div>
     </div>
     <div class="slide">
       <%= image_tag "Slider1Pictures/3.jpg", class:"image" %>
+      <div class="slider-data-text">
+        <div class="slider-heading">
+          Trustful Workflow
+        </div>
+        <div class="slider-text mt-2 mr-5 ml-5">
+          PlusOne ensures a hassle-free medical journey powered by a case manager for every individual case.
+        </div>
+        <button class="btns btns-submit mt-5">
+          Ask PlusOne Expert
+        </button>
+      </div>
     </div>
   </div>
   <section class="services-section">
