--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,7 +15,7 @@
         <div class="menu-item active">
          <a href="<%= root_path %>"> Home </a>
         </div>
-        <div class="menu-item">Treatment</div>
+<!--        <div class="menu-item">Treatment</div>-->
         <div class="menu-item"><a href="<%= about_path %>">About us </a></div>
         <div class="menu-item"><a href="<%= contact_path%>">Contact </a></div>
       </div>
