--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,6 +13,8 @@
     width: 85%;
     margin: auto;
     transform: translateY(-40%);
+    justify-content: space-between;
+    max-width: 1440px;
   }
   &-item{
     display: flex;
@@ -65,6 +67,7 @@
 .cards-container{
   width: 85%;
   margin: auto;
+  max-width: 1440px;
 }
 .health{
   &-cards{
@@ -205,6 +208,7 @@
   &-container{
     background-color: #FAFAFA;
     padding: 50px;
+
   }
   &-container-heading{
     text-align: center;
@@ -227,6 +231,9 @@
   &-card-row{
     display: flex;
     margin-bottom: 40px;
+    margin: auto;
+    max-width: 1440px;
+
   }
   &-doctor-card{
     flex: 0 0 23%;
@@ -284,6 +291,7 @@
     display: flex;
     width: 100%;
     margin: auto;
+    max-width: 1440px;
   }
   &-sides{
     flex: 0 0 48%;
