slider image added at contact page

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,4 +1,16 @@
 <% provide(:title, 'Booking') %>
+<section class="slider">
+  <div class="slider-back-image-container">
+    <div class="slider-text-container">
+      <div class="slider-heading heading-lg">
+        Contact US
+      </div>
+      <div class="slider-text white-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam beatae, doloremque earum molestias repudiandae vel?
+      </div>
+    </div>
+  </div>
+</section>
 <section class="reviews-container">
   <div class="reviews-inner-container">
 
