button text changed

--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -4,7 +4,7 @@
       Always there to care.
     </div>
     <div class="appointment-form-heading">
-      Book Appointment
+      Ask PlusOne Expert
     </div>
     <div id="helpBlock" class="help-block"></div>
     <%= form_for(@booking, :html => {:remote => true}) do |f| %>
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="appointment-form-button">
-        <%= f.submit 'Save Changes', class: 'btns btns-submit' %>
+        <%= f.submit 'Submit', class: 'btns btns-submit' %>
       </div>
     <% end %>
   </div>
