--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -6,10 +6,28 @@
     display: flex;
     width: 80%;
     margin: auto;
+    @media only screen and (max-width: 1100px)  {
+      flex-wrap: wrap;
+
+    }
+    @media only screen and (max-width: 768px)  {
+      flex-wrap: wrap;
+      width: 100%;
+      justify-content: center;
+    }
   }
   &-col{
     flex: 0 0 25%;
     margin-right: 20px;
+    @media only screen and (max-width: 768px)  {
+      flex: 1;
+      min-width: 250px;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+    }
     &-heading{
       font-family: "Roboto",sans-serif;
       font-size: 24px;
