--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -10,16 +10,33 @@
     display: flex;
     background-color: #fff;
     box-shadow: 0 0 35px 5px #dceff8;
-    width: 85%;
+    width: 100%;
     margin: auto;
-    transform: translateY(-40%);
     justify-content: space-between;
     max-width: 1440px;
+    transform: translateY(-20%);
+    flex-direction: column;
+    @media only screen and (min-width: 600px) {
+      width: 60%;
+    }
+    @media only screen and (min-width: 800px) {
+      transform: translateY(-40%);
+      flex-direction: row;
+      width: 100%;
+    }
+    @media only screen and (min-width: 1100px) {
+      width: 85%;
+    }
+
+
   }
   &-item{
     display: flex;
     padding: 45px 20px 60px;
     align-items: center;
+    @media only screen and (max-width: 800px) {
+      border-bottom:1px dashed #cccccc;
+    }
   }
   &-icon{
     flex: 0 0 35%;
@@ -29,6 +46,9 @@
     flex: 0 0 65%;
     padding: 10px 50px 10px 0px;
     border-right: 1px dashed #cccccc;
+    @media only screen and (max-width: 800px) {
+     border-right:none;
+    }
   }
   &-detail-border-none{
     border-right: none;
@@ -56,6 +76,10 @@
 .cards-row{
   display: flex;
   align-items: stretch;
+  flex-wrap: wrap;
+  @media only screen and (min-width: 1100px) {
+   flex-wrap: nowrap;
+  }
 }
 .services-section,
 .cards-section{
@@ -65,14 +89,20 @@
   padding-bottom: 50px;
 }
 .cards-container{
-  width: 85%;
+  width: 100%;
   margin: auto;
   max-width: 1440px;
+  justify-content: center;
+  @media only screen and (min-width: 1100px) {
+    width: 85%;
+  }
 }
 .health{
   &-cards{
     //height: 450px;
-    width: 33%;
+    //width: 33%;
+    flex: 1;
+    min-width: 300px;
     overflow: hidden;
     margin: 5px 10px;
     display: flex;
@@ -104,6 +134,10 @@
     background-color: #00a0f0;
     padding: 30px;
     color: #fff;
+    flex: 1;
+    @media only screen and (min-width: 1100px) {
+      flex: auto;
+    }
   }
   &-card-text-row{
     display: flex;
@@ -150,9 +184,15 @@
   &-left-side{
     flex: 0 0 65%;
     background-color: rgba(255,255,255,.7);
+    @media only screen and (max-width:786px)  {
+      flex: 0 0 100%;
+    }
   }
   &-left-side{
     padding: 50px 100px;
+    @media only screen and (max-width:786px)  {
+      padding: 50px 10px;
+    }
   }
   &-item{
     display: flex;
@@ -180,6 +220,10 @@
     background-attachment: fixed;
     height: 305px;
     background-position: top;
+    @media only screen and (max-width: 768px) {
+      height: auto;
+      padding: 40px 0;
+    }
   }
   &-background-color-blue{
     display: flex;
@@ -187,10 +231,19 @@
     margin: auto;
     align-items: center;
     height: 100%;
+    justify-content: center;
+    @media only screen and (max-width: 1100px) {
+      width: 100%;
+    }
+    @media only screen and (max-width: 768px) {
+      flex-wrap: wrap;
+      height: auto;
+    }
   }
   &-item{
     width: 25%;
     text-align: center;
+    min-width: 180px;
   }
   &-value{
     color: #ffffff;
@@ -208,7 +261,10 @@
   &-container{
     background-color: #FAFAFA;
     padding: 50px;
-
+  @media only screen and(max-width: 900px) {
+    padding: 10px;
+    padding-bottom: 40px;
+  }
   }
   &-container-heading{
     text-align: center;
@@ -227,13 +283,23 @@
     text-transform: none;
     margin-top: 20px;
     margin-bottom: 40px;
+    @media only screen and(max-width: 786px) {
+      width: 100%;
+    }
   }
   &-card-row{
     display: flex;
     margin-bottom: 40px;
     margin: auto;
     max-width: 1440px;
-
+    @media only screen and(max-width: 900px) {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    @media only screen and(max-width: 786px) {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
   }
   &-doctor-card{
     flex: 0 0 23%;
@@ -242,6 +308,17 @@
     overflow: hidden;
     background-color: #fff;
     padding-bottom: 20px;
+    @media only screen and(max-width: 900px) {
+      flex:1;
+      min-width: 200px;
+      margin-bottom: 16px;
+      //max-width: 300px;
+    }
+    @media only screen and(max-width: 786px) {
+      min-width:250px;
+      margin-bottom: 15px;
+      flex: 1;
+    }
   }
   &-doctor-card:hover{
     box-shadow: 0 8px 29px 2px #93bfe866;
@@ -286,15 +363,28 @@
 .reviews{
   &-container{
     padding: 100px;
+    @media only screen and(max-width: 900px) {
+      padding: 30px;
+    }
+    @media only screen and (max-width: 768px) {
+      padding: 10px;
+    }
   }
   &-inner-container{
     display: flex;
     width: 100%;
     margin: auto;
     max-width: 1440px;
+    @media only screen and (max-width: 768px) {
+      flex-direction: column;
+    }
   }
   &-sides{
     flex: 0 0 48%;
+    @media only screen and (max-width: 768px) {
+      flex:1;
+      margin-bottom: 16px;
+    }
   }
   &-left-side{
     background-color: #dcf0fa;
