--- a/app/assets/stylesheets/slider.scss
+++ b/app/assets/stylesheets/slider.scss
@@ -57,6 +57,11 @@
     line-height: 87px;
     font-weight: 300;
     white-space: nowrap;
+    @media only screen and(max-width: 768px) {
+      white-space: pre-wrap;
+      font-size: 50px;
+      line-height: 40px;
+    }
   }
 }
 .slide{
