--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
       <div class="logo-container u-d-flex u-justify-content-center">
         <img src="https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/main-logo.jpg" alt="Logo" class="logo-image">
       </div>
-      <div class="menu-items-center u-flex-1">
+      <div class="menu-items-center u-flex-1 menu-item-mob">
       <div class="menu-items u-d-flex ">
         <div class="menu-item active">
          <a href="<%= root_path %>"> Home </a>
