"cross icon on form errors"

--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -41,8 +41,8 @@
       <!--</div>-->
         <div class="ajax-button appointment-form-button">
           <div class="fa fa-check done"></div>
-          <div class="fa fa-close failed"></div>
-          <%= f.submit "Save Changes", class: "submit animated btn btn-primary", id: "submit" %>
+          <div class="fa fa-close failed" style="color:red !important;"></div>
+          <%= f.submit "Save Changes", class: "submit btn btn-primary", id: "submit" %>
         </div>
     <% end %>
   </div>
