--- a/app/views/bookings/create.js.erb
+++ b/app/views/bookings/create.js.erb
@@ -5,6 +5,6 @@ $(".notice").remove();
   $("#helpBlock").append("<div class='notice' style='color:red;'><%= escape_javascript( message.humanize)%></div>");
   <% end %>
 <%else %>
-  $("#helpBlock").append("<div class='notice' style='color:green;'> Booking request Submitted </div>");
+  $("#helpBlock").append("<div class='submitted' style='color:green;'> Booking request Submitted </div>");
    document.getElementById("new_booking").reset();
 <% end %>
