--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -29,7 +29,7 @@
             Aliquam commodi consequatur deleniti distinctio, enim, eveniet perferendis porro quasi quo
             reprehenderit repudiandae sed sequi unde voluptatibus.
           </div>
-          <div class="contact-page-bottom d-flex justify-content-between">
+          <div class="contact-page-bottom d-flex flex-wrap justify-content-between">
           <div class="reviews-review-right-bottom align-items-center">
            <i class="fa fa-mobile-phone active fa-4x"></i>
             <div class="ml-4">
@@ -64,7 +64,7 @@
           Aliquam commodi consequatur deleniti distinctio, enim, eveniet perferendis porro quasi quo
           reprehenderit repudiandae sed sequi unde voluptatibus.
         </div>
-        <div class="contact-page-bottom d-flex justify-content-between">
+        <div class="contact-page-bottom d-flex flex-wrap justify-content-between">
           <div class="reviews-review-right-bottom align-items-center">
             <i class="fa fa-mobile-phone active fa-4x"></i>
             <div class="ml-4">
