--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<main>
+<main class="padding-top-75">
   <div id="slideshow" class="sliders">
     <div class="active-slide slide">
       <%= image_tag "Slider1Pictures/1.jpg", class:"image" %>
