--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,6 +4,9 @@
   align-items: center;
   height: 100vh;
   border-bottom: 1px solid black;
+  //@media (max-width: 768px) {
+  //  height: 75vh;
+  //}
 }
 .services{
   &-container{
@@ -47,7 +50,7 @@
     padding: 10px 50px 10px 0px;
     border-right: 1px dashed #cccccc;
     @media only screen and (max-width: 800px) {
-     border-right:none;
+     border-right: none;
     }
   }
   &-detail-border-none{
@@ -62,6 +65,7 @@
     font-weight: 400;
     letter-spacing: 0px;
     text-transform: none;
+    //direction: rtl;
   }
   &-text{
     color: #828282;
@@ -70,6 +74,7 @@
     line-height: 26px;
     font-style: normal;
     font-weight: 400;
+    //direction: rtl;
   }
 }
 //cards
@@ -128,6 +133,7 @@
     font-weight: 400;
     letter-spacing: 0px;
     text-transform: none;
+    text-align: right;
     margin: 15px 0;
   }
   &-blue-card{
@@ -198,6 +204,7 @@
     display: flex;
     margin-bottom: 14px;
     align-items: center;
+    //flex-direction: row-reverse;
     &-left{
       flex: 0 0 25%;
       text-align: center;
@@ -211,6 +218,7 @@
       font-weight: 400;
       letter-spacing: 0px;
       text-transform: none;
+      //text-align: right;
     }
   }
 }
@@ -224,6 +232,10 @@
       height: auto;
       padding: 40px 0;
     }
+  }
+  &-image{
+    height: 100px;
+    width: 100px;
   }
   &-background-color-blue{
     display: flex;
