--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,11 +1,6 @@
 <header>
-  <div class="menu-bar u-d-flex u-align-item-center u-justify-content-space-between">
-    <div class="menubutton ">
-      <button class="toggle-button">
-        <i class="fa fa-bars"></i>
-      </button>
+  <div class="menu-bar u-d-flex u-align-item-center d-done-at-md u-justify-content-space-between">
 
-    </div>
     <div class="menu-items-container u-d-flex u-justify-content-space-between u-flex-1">
       <div class="logo-container u-d-flex u-justify-content-center">
         <img src="https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/main-logo.jpg" alt="Logo" class="logo-image">
@@ -29,7 +24,7 @@
           </div>
         </div>
         <div class="search-icon menu-item-icon">
-          <i class="fa fa-search fa-rotate-90"></i>
+          <i class="fa d-none fa-search fa-rotate-90"></i>
         </div>
         <div class="depricon-icon menu-item-icon">
           <i class="fa fa-bars"></i>
@@ -37,4 +32,29 @@
       </div>
     </div>
   </div>
+<!-- <Mobile-header>-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white nav-bar-mobile d-md-none">
+    <button class="navbar-toggler botton-nav-bar" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <i class="fa fa-bars fa-lg fa-black-color"></i>
+    </button>
+    <a class="navbar-brand" href="<%= root_path %>">
+      <img src="https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/main-logo.jpg" alt="Logo" class="logo-image-md">
+
+    </a>
+
+    <div class="collapse navbar-collapse nav-bar-collapse-data" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link nav-link-mb" href="<%= root_path %>">Home </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-link-mb" href="<%= about_path %>">About us </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-link-mb nav-link-mb-b-0" href="<%= contact_path%>">Contact </a>
+        </li>
+
+      </ul>
+    </div>
+  </nav>
 </header>
