--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,7 +3,7 @@
 @import "menu";
 @import "d-utiltity";
 @import "font-awesome";
-@import "animate";
+//@import "animate";
 @import "contact";
 @import "intlTelInput";
 @import 'slick';
