--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -40,9 +40,9 @@
         <!--<%#= f.submit 'Submit', class: 'btns btns-submit' %>-->
       <!--</div>-->
         <div class="ajax-button appointment-form-button">
-          <div class="fa fa-check done"></div>
-          <div class="fa fa-close failed" style="color:red !important;"></div>
-          <%= f.submit "Save Changes", class: "submit btn btn-primary", id: "submit" %>
+          <div class="fa fa-check fa-customize done"></div>
+          <div class="fa fa-close fa-customize failed" style="color:red !important;"></div>
+          <%= f.submit "Save Changes", class: "btn btn-primary submit", id: "submit" %>
         </div>
     <% end %>
   </div>
