--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,13 +4,13 @@
       <%= image_tag "Slider1Pictures/1.jpg", class:"image" %>
       <div class="slider-data-text">
         <div class="slider-heading">
-          World-Renowned Experts
+          <%= t :world_renowned_experts %>
         </div>
         <div class="slider-text mt-2 mr-5 ml-5">
-          PlusOne ensures a hassle-free medical journey powered by a case manager for every individual case.
+          <%= t  :slider_description %>
         </div>
         <button class="btns btns-submit mt-5">
-          Ask PlusOne Expert
+          <%= t :ask_plus_one_expert %>
         </button>
       </div>
 
@@ -19,13 +19,13 @@
       <%= image_tag "Slider1Pictures/2.jpg", class:"image" %>
       <div class="slider-data-text">
         <div class="slider-heading">
-          Timely Consultations
+          <%= t  :timely_consultations %>
         </div>
         <div class="slider-text mt-2 mr-5 ml-5">
-          PlusOne ensures a hassle-free medical journey powered by a case manager for every individual case.
+          <%= t  :slider_description %>
         </div>
         <button class="btns btns-submit mt-5">
-          Ask PlusOne Expert
+          <%= t :ask_plus_one_expert %>
         </button>
       </div>
     </div>
@@ -33,13 +33,13 @@
       <%= image_tag "Slider1Pictures/3.jpg", class:"image" %>
       <div class="slider-data-text">
         <div class="slider-heading">
-          Trustful Workflow
+          <%= t :trustful_workflow %>
         </div>
         <div class="slider-text mt-2 mr-5 ml-5">
-          PlusOne ensures a hassle-free medical journey powered by a case manager for every individual case.
+          <%= t  :slider_description %>
         </div>
         <button class="btns btns-submit mt-5">
-          Ask PlusOne Expert
+          <%= t :ask_plus_one_expert %>
         </button>
       </div>
     </div>
